--- a/src/template/create-api/constants.ts.ejs
+++ b/src/template/create-api/constants.ts.ejs
@@ -3,7 +3,7 @@
  */
 export enum API_URL {
   /**
-   * <%= businessName %>
+   * <%= businessName %><%= businessNameDesc %>
    */
   <%= urlName %> = '<%= urlPath %>',
 }
