--- a/src/template/create-api/edit.ts.ejs
+++ b/src/template/create-api/edit.ts.ejs
@@ -7,7 +7,7 @@ import { request } from '@mini/shared'
  * @returns 修改的<%= businessName %>
  */
 export function update<%= access %><%= model%>(data: Partial<Api.<%= model%>>) {
-  return request.put<ResponseData<Api.<%= model%>>>({
+  return request.put({
     url: API_URL.<%= urlName %>,
     data,
   })
