--- a/src/template/create-api/list.ts.ejs
+++ b/src/template/create-api/list.ts.ejs
@@ -5,9 +5,9 @@ import { API_URL } from '../constants'
  * <%= businessName %>列表
  * @param params
  */
-export function get<%= access %><%= model %>List(params?: ListParams<Api.<%= model %>>) {
+export function get<%= public_sign %><%= model %>List(params?: ListParams<Api.<%= model %>>) {
   return request.get<ResponseList<Api.<%= model %>>>({
-    url: API_URL.<%= urlName %>,
+    url: API_URL.<%= url_constant %>,
     params: {
       ...params,
     },
@@ -24,13 +24,13 @@ import type { ListPageResult } from '@mini/shared'
 import type { QueryKey } from '@tanstack/react-query'
 import { API_URL, PAGE_SIZE } from '@mini/service'
 import { useInfiniteQuery } from '@tanstack/react-query'
-import { get<%= access %><%= model %>List } from '../api/<%= modelName %>'
+import { get<%= public_sign %><%= model %>List } from '../api/<%= modelName %>'
 import { getNextPageParam } from '../utils/calculateNextPage'
 
 /**
  * <%= businessName %> 无限列表
  */
-export function use<%= access %><%= model %>List(
+export function use<%= public_sign %><%= model %>List(
   params: Partial<Api.<%= model %>> = {},
   enabled = true,
 ) {
@@ -41,10 +41,10 @@ export function use<%= access %><%= model %>List(
     QueryKey,
     number
   >({
-    queryKey: [API_URL.<%= urlName %>, JSON.stringify(params)],
+    queryKey: [API_URL.<%= url_constant %>, JSON.stringify(params)],
     initialPageParam: 1,
     queryFn: async ({ pageParam: pageNum = 1 }) => {
-      const response = await get<%= access %><%= model %>List({
+      const response = await get<%= public_sign %><%= model %>List({
         pageSize: PAGE_SIZE,
         pageNum,
         ...params,
