--- a/src/template/create-api/constants.ts.ejs
+++ b/src/template/create-api/constants.ts.ejs
@@ -5,5 +5,5 @@ export enum API_URL {
   /**
    * <%= businessName %><%= businessNameDesc %>
    */
-  <%= urlName %> = '<%= urlPath %>',
+  <%= url_constant %> = '<%= urlPath %>',
 }
