--- a/src/template/create-api/add.ts.ejs
+++ b/src/template/create-api/add.ts.ejs
@@ -1,3 +1,5 @@
+// api/<%= modelName %>.ts
+
 import { API_URL } from '@mini/service'
 import { request } from '@mini/shared'
 
@@ -14,10 +16,7 @@ export function add<%= public_sign %><%= model%>(data: Partial<Api.<%= model%>>)
 }
 
 
-// ************************************************
-// ****************** hooks ***********************
-// ************************************************
-
+// hooks/<%= modelName %>.ts
 
 import { useMutation } from '@tanstack/react-query'
 import { add<%= public_sign %><%= model%> } from '../api/<%= modelName %>'
