--- a/src/template/create-nest-js-module/controller.ejs
+++ b/src/template/create-nest-js-module/controller.ejs
@@ -2,25 +2,25 @@ import { Body, Controller, Delete, Get, Param, ParseIntPipe, Patch, Post, Query 
 import { Permission } from '@/libs/common/src/auth/decorators/permission.decorator'
 import { CursorPageDto } from '@/libs/common/src/dto/cursor-page.dto.ts'
 import { CommonResult } from '@/libs/common/src/utils/common-result'
-import { Create<%= CapitalizeModuleName %>Dto } from './dto/create-<%= moduleName %>.dto'
-import { <%= CapitalizeModuleName %>PageDto } from './dto/<%= moduleName %>-page.dto'
-import { Update<%= CapitalizeModuleName %>Dto } from './dto/update-<%= moduleName %>.dto'
-import { <%= CapitalizeModuleName %>Service } from './<%= moduleName %>.service'
+import { Create<%= upperCamelCase %>Dto } from './dto/create-<%= moduleName %>.dto'
+import { <%= upperCamelCase %>PageDto } from './dto/<%= moduleName %>-page.dto'
+import { Update<%= upperCamelCase %>Dto } from './dto/update-<%= moduleName %>.dto'
+import { <%= upperCamelCase %>Service } from './<%= moduleName %>.service'
 
 /**
  * <%= moduleNameCN %>管理
  */
 @Controller('<%= moduleName %>')
-export class <%= CapitalizeModuleName %>Controller {
-  constructor(private readonly <%= moduleName %>Service: <%= CapitalizeModuleName %>Service) {}
+export class <%= upperCamelCase %>Controller {
+  constructor(private readonly <%= lowerCamelCase %>Service: <%= upperCamelCase %>Service) {}
 
   /**
    * 创建<%= moduleNameCN %>
    */
   @Permission('<%= moduleName %>.create')
   @Post('create')
-  async create(@Body() create<%= CapitalizeModuleName %>Dto: Create<%= CapitalizeModuleName %>Dto) {
-    return CommonResult.success(await this.<%= moduleName %>Service.create(create<%= CapitalizeModuleName %>Dto))
+  async create(@Body() create<%= upperCamelCase %>Dto: Create<%= upperCamelCase %>Dto) {
+    return CommonResult.success(await this.<%= lowerCamelCase %>Service.create(create<%= upperCamelCase %>Dto))
   }
 
   /**
@@ -29,7 +29,7 @@ export class <%= CapitalizeModuleName %>Controller {
   @Permission('<%= moduleName %>.all')
   @Get('all')
   async findAll() {
-    return CommonResult.success(await this.<%= moduleName %>Service.findAll())
+    return CommonResult.success(await this.<%= lowerCamelCase %>Service.findAll())
   }
 
   /**
@@ -37,18 +37,18 @@ export class <%= CapitalizeModuleName %>Controller {
    */
   @Permission('<%= moduleName %>.list')
   @Get('list')
-  async page(@Query() <%= moduleName %>PageDto: <%= CapitalizeModuleName %>PageDto) {
-    return CommonResult.success(await this.<%= moduleName %>Service.paginate(<%= moduleName %>PageDto))
+  async page(@Query() <%= lowerCamelCase %>PageDto: <%= upperCamelCase %>PageDto) {
+    return CommonResult.success(await this.<%= lowerCamelCase %>Service.paginate(<%= lowerCamelCase %>PageDto))
   }
 
 
-    /**
-   * 权限树形结构
+  /**
+   *  <%= moduleNameCN %>树形结构
    */
   @Permission('<%= moduleName %>.tree')
   @Get('tree')
   async findTree() {
-    return CommonResult.success(await this.<%= moduleName %>Service.findTree())
+    return CommonResult.success(await this.<%= lowerCamelCase %>Service.findTree())
   }
 
 
@@ -58,7 +58,7 @@ export class <%= CapitalizeModuleName %>Controller {
   @Permission('<%= moduleName %>.cursor')
   @Get('cursor')
   async cursor(@Query() cursorPageDto: CursorPageDto) {
-    return CommonResult.success(await this.<%= moduleName %>Service.cursorPaginate(cursorPageDto))
+    return CommonResult.success(await this.<%= lowerCamelCase %>Service.cursorPaginate(cursorPageDto))
   }
 
   /**
@@ -67,7 +67,7 @@ export class <%= CapitalizeModuleName %>Controller {
   @Permission('<%= moduleName %>.detail')
   @Get('detail/:id')
   async findOne(@Param('id', ParseIntPipe) id: number) {
-    return CommonResult.success(await this.<%= moduleName %>Service.findOne(id))
+    return CommonResult.success(await this.<%= lowerCamelCase %>Service.findOne(id))
   }
 
   /**
@@ -75,8 +75,8 @@ export class <%= CapitalizeModuleName %>Controller {
    */
   @Permission('<%= moduleName %>.update')
   @Patch('update/:id')
-  async update(@Param('id', ParseIntPipe) id: number, @Body() update<%= CapitalizeModuleName %>Dto: Update<%= CapitalizeModuleName %>Dto) {
-    await this.<%= moduleName %>Service.update(id, update<%= CapitalizeModuleName %>Dto)
+  async update(@Param('id', ParseIntPipe) id: number, @Body() update<%= upperCamelCase %>Dto: Update<%= upperCamelCase %>Dto) {
+    await this.<%= lowerCamelCase %>Service.update(id, update<%= upperCamelCase %>Dto)
     return CommonResult.success()
   }
 
@@ -86,7 +86,7 @@ export class <%= CapitalizeModuleName %>Controller {
   @Permission('<%= moduleName %>.delete')
   @Delete('remove/:id')
   async remove(@Param('id', ParseIntPipe) id: number) {
-    await this.<%= moduleName %>Service.remove(+id)
+    await this.<%= lowerCamelCase %>Service.remove(+id)
     return CommonResult.success()
   }
 }
